--- a/index.html
+++ b/index.html
@@ -18,22 +18,32 @@
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-header"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
 
         <ul class="header-list">
-          <li class="header-item"><a href="">Studio</a></li>
-          <li class="header-item"><a href="portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a href="">Contacts</a></li>
+          <li class="header-item">
+            <a href="./index.html" class="header-link">Studio</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address class="heder-address">
         <ul class="header-list-address">
           <li class="header-item-address">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link-address"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="header-item-address">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-address"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
