--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
 
     <!--info-->
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"> <span>Web</span>Studio</a>
+      <a href="./index.html" class="logo-footer">
+        Web<span class="span-footer">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
