--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+  <body class="body-pg2">
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="logo-header"><span>Web</span>Studio</a>
