--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body class="body">
+  <body class="body" style="font-family: Roboto, sans-serif">
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
