--- a/portfolio.html
+++ b/portfolio.html
@@ -13,96 +13,124 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body class="body-pg2">
+  <body class="body-pg2" style="font-family: Roboto, sans-serif">
+    <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-header"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
 
         <ul class="header-list">
-          <li class="header-item"><a href="">Studio</a></li>
-          <li class="header-item"><a href="portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a href="">Contacts</a></li>
+          <li class="header-item">
+            <a href="./index.html" class="header-link">Studio</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address class="heder-address">
         <ul class="header-list-address">
           <li class="header-item-address">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link-address"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="header-item-address">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-address"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <ul>
-        <li><button type="button" class="pg2-button">All</button></li>
-        <li><button type="button" class="pg2-button">Web Site</button></li>
-        <li><button type="button" class="pg2-button">App</button></li>
-        <li><button type="button" class="pg2-button">Design</button></li>
-        <li><button type="button" class="pg2-button">Marketing</button></li>
-      </ul>
+      <section class="menu-button">
+        <h1>/</h1>
+        <ul class="list-button">
+          <li><button type="button" class="pg2-button">All</button></li>
+          <li><button type="button" class="pg2-button">Web Site</button></li>
+          <li><button type="button" class="pg2-button">App</button></li>
+          <li><button type="button" class="pg2-button">Design</button></li>
+          <li><button type="button" class="pg2-button">Marketing</button></li>
+        </ul>
 
-      <ul>
-        <li>
-          <img src="images/hw9.jpg" alt="1" width="360" />
-          <h3 class="portfolio-title-pg2">Banking App Interface Concept</h3>
-          <p class="portfolio-text-pg2">App</p>
-        </li>
-        <li>
-          <img src="images/hw7.jpg" alt="2" width="360" />
-          <h3 class="portfolio-title-pg2">Cashless Payment</h3>
-          <p class="portfolio-text-pg2">Marketing</p>
-        </li>
-        <li>
-          <img src="images/hw1.jpg" alt="3" width="360" />
-          <h3 class="portfolio-title-pg2">Meditation App</h3>
-          <p class="portfolio-text-pg2">App</p>
-        </li>
-      </ul>
-
-      <ul>
-        <li>
-          <img src="images/hw2.jpg" alt="4" width="360" />
-          <h3 class="portfolio-title-pg2">Taxi Service</h3>
-          <p class="portfolio-text-pg2">Marketing</p>
-        </li>
-        <li>
-          <img src="images/hw4.jpg" alt="5" width="360" />
-          <h3 class="portfolio-title-pg2">Screen Illustrations</h3>
-          <p class="portfolio-text-pg2">Design</p>
-        </li>
-        <li>
-          <img src="images/hw3.jpg" alt="6" width="360" />
-          <h3 class="portfolio-title-pg2">Online Courses</h3>
-          <p class="portfolio-text-pg2">Marketing</p>
-        </li>
-      </ul>
-
-      <ul>
-        <li>
-          <img src="images/hw5.jpg" alt="7" width="360" />
-          <h3 class="portfolio-title-pg2">Instagram Stories Concept</h3>
-          <p class="portfolio-text-pg2">Design</p>
-        </li>
-        <li>
-          <img src="images/hw8.jpg" alt="8" width="360" />
-          <h3 class="portfolio-title-pg2">Organic Food</h3>
-          <p class="portfolio-text-pg2">Web Site</p>
-        </li>
-        <li>
-          <img src="images/hw6.jpg" alt="9" width="360" />
-          <h3 class="portfolio-title-pg2">Fresh Coffee</h3>
-          <p class="portfolio-text-pg2">Web Site</p>
-        </li>
-      </ul>
+        <ul class="list-portfolio">
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw9.jpg" alt="1" width="360" />
+              <h2 class="portfolio-title-pg2">Banking App Interface Concept</h2>
+              <p class="portfolio-text-pg2">App</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw7.jpg" alt="2" width="360" />
+              <h2 class="portfolio-title-pg2">Cashless Payment</h2>
+              <p class="portfolio-text-pg2">Marketing</p></a
+            >
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw1.jpg" alt="3" width="360" />
+              <h2 class="portfolio-title-pg2">Meditation App</h2>
+              <p class="portfolio-text-pg2">App</p></a
+            >
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw2.jpg" alt="4" width="360" />
+              <h2 class="portfolio-title-pg2">Taxi Service</h2>
+              <p class="portfolio-text-pg2">Marketing</p></a
+            >
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw4.jpg" alt="5" width="360" />
+              <h2 class="portfolio-title-pg2">Screen Illustrations</h2>
+              <p class="portfolio-text-pg2">Design</p></a
+            >
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw3.jpg" alt="6" width="360" />
+              <h2 class="portfolio-title-pg2">Online Courses</h2>
+              <p class="portfolio-text-pg2">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw5.jpg" alt="7" width="360" />
+              <h2 class="portfolio-title-pg2">Instagram Stories Concept</h2>
+              <p class="portfolio-text-pg2">Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw8.jpg" alt="8" width="360" />
+              <h2 class="portfolio-title-pg2">Organic Food</h2>
+              <p class="portfolio-text-pg2">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-porfolio">
+              <img src="images/hw6.jpg" alt="9" width="360" />
+              <h2 class="portfolio-title-pg2">Fresh Coffee</h2>
+              <p class="portfolio-text-pg2">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"> <span>Web</span>Studio</a>
+      <a href="./index.html" class="logo-footer">
+        Web<span class="span-footer">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
