--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
       <nav class="header-nav">
         <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
 
-        <ul class="header-list">
+        <ul class="list">
           <li class="header-item">
             <a href="./index.html" class="header-link">Studio</a>
           </li>
