--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="header-nav">
         <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
 
-        <ul class="header-list">
+        <ul class="list">
           <li class="header-item">
             <a href="./index.html" class="header-link">Studio</a>
           </li>
@@ -60,7 +60,7 @@
 
       <section class="skills">
         <h2>/</h2>
-        <ul class="skills-list">
+        <ul class="list">
           <li class="skills-item">
             <h3 class="skills-title">Strategy</h3>
             <p class="skills-text">
@@ -98,7 +98,7 @@
       <!--work-->
       <section class="work">
         <h2 class="work-title">What are we doing</h2>
-        <ul class="work-list">
+        <ul class="list">
           <li class="work-item">
             <img src="./images/img6.jpg" alt="display" width="360" />
           </li>
@@ -115,7 +115,7 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
 
-        <ul class="team-list">
+        <ul class="list">
           <li class="team-item">
             <img src="./images/img.jpg" alt=">Mark Guerrero" width="264" />
             <h3 class="team-title-second">Mark Guerrero</h3>
@@ -142,7 +142,7 @@
 
     <!--info-->
     <footer class="footer">
-      <a href="./index.html" class="logo-footer">
+      <a href="./index.html" class="link">
         Web<span class="span-footer">Studio</span></a
       >
       <p class="footer-text">
