--- a/portfolio.html
+++ b/portfolio.html
@@ -33,16 +33,14 @@
       </nav>
 
       <address class="heder-address">
-        <ul class="header-list-address">
+        <ul class="list">
           <li class="header-item-address">
-            <a href="mailto:info@devstudio.com" class="link-address"
+            <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a href="tel:+110001111111" class="link-address"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -52,72 +50,72 @@
       <section class="menu-button">
         <h1>/</h1>
         <ul class="list-button">
-          <li><button type="button" class="pg2-button">All</button></li>
-          <li><button type="button" class="pg2-button">Web Site</button></li>
-          <li><button type="button" class="pg2-button">App</button></li>
-          <li><button type="button" class="pg2-button">Design</button></li>
-          <li><button type="button" class="pg2-button">Marketing</button></li>
+          <li><button type="button" class="pg-button">All</button></li>
+          <li><button type="button" class="pg-button">Web Site</button></li>
+          <li><button type="button" class="pg-button">App</button></li>
+          <li><button type="button" class="pg-button">Design</button></li>
+          <li><button type="button" class="pg-button">Marketing</button></li>
         </ul>
 
         <ul class="list-portfolio">
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw9.jpg" alt="1" width="360" />
               <h2 class="portfolio-title-pg2">Banking App Interface Concept</h2>
               <p class="portfolio-text-pg2">App</p>
             </a>
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw7.jpg" alt="2" width="360" />
               <h2 class="portfolio-title-pg2">Cashless Payment</h2>
               <p class="portfolio-text-pg2">Marketing</p></a
             >
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw1.jpg" alt="3" width="360" />
               <h2 class="portfolio-title-pg2">Meditation App</h2>
               <p class="portfolio-text-pg2">App</p></a
             >
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link-">
               <img src="images/hw2.jpg" alt="4" width="360" />
               <h2 class="portfolio-title-pg2">Taxi Service</h2>
               <p class="portfolio-text-pg2">Marketing</p></a
             >
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw4.jpg" alt="5" width="360" />
               <h2 class="portfolio-title-pg2">Screen Illustrations</h2>
               <p class="portfolio-text-pg2">Design</p></a
             >
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw3.jpg" alt="6" width="360" />
               <h2 class="portfolio-title-pg2">Online Courses</h2>
               <p class="portfolio-text-pg2">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw5.jpg" alt="7" width="360" />
               <h2 class="portfolio-title-pg2">Instagram Stories Concept</h2>
               <p class="portfolio-text-pg2">Design</p>
             </a>
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw8.jpg" alt="8" width="360" />
               <h2 class="portfolio-title-pg2">Organic Food</h2>
               <p class="portfolio-text-pg2">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="" class="link-porfolio">
+            <a href="" class="link">
               <img src="images/hw6.jpg" alt="9" width="360" />
               <h2 class="portfolio-title-pg2">Fresh Coffee</h2>
               <p class="portfolio-text-pg2">Web Site</p>
