--- a/portfolio.html
+++ b/portfolio.html
@@ -60,63 +60,63 @@
         <ul class="list-portfolio">
           <li>
             <a href="" class="link">
-              <img src="images/hw9.jpg" alt="1" width="360" />
+              <img src="./images/hw9.jpg" alt="1" width="360" />
               <h2 class="portfolio-title-pg2">Banking App Interface Concept</h2>
               <p class="portfolio-text-pg2">App</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw7.jpg" alt="2" width="360" />
+              <img src="./images/hw7.jpg" alt="2" width="360" />
               <h2 class="portfolio-title-pg2">Cashless Payment</h2>
               <p class="portfolio-text-pg2">Marketing</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw1.jpg" alt="3" width="360" />
+              <img src="./images/hw1.jpg" alt="3" width="360" />
               <h2 class="portfolio-title-pg2">Meditation App</h2>
               <p class="portfolio-text-pg2">App</p></a
             >
           </li>
           <li>
             <a href="" class="link-">
-              <img src="images/hw2.jpg" alt="4" width="360" />
+              <img src="./images/hw2.jpg" alt="4" width="360" />
               <h2 class="portfolio-title-pg2">Taxi Service</h2>
               <p class="portfolio-text-pg2">Marketing</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw4.jpg" alt="5" width="360" />
+              <img src="./images/hw4.jpg" alt="5" width="360" />
               <h2 class="portfolio-title-pg2">Screen Illustrations</h2>
               <p class="portfolio-text-pg2">Design</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw3.jpg" alt="6" width="360" />
+              <img src="./images/hw3.jpg" alt="6" width="360" />
               <h2 class="portfolio-title-pg2">Online Courses</h2>
               <p class="portfolio-text-pg2">Marketing</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw5.jpg" alt="7" width="360" />
+              <img src="./images/hw5.jpg" alt="7" width="360" />
               <h2 class="portfolio-title-pg2">Instagram Stories Concept</h2>
               <p class="portfolio-text-pg2">Design</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw8.jpg" alt="8" width="360" />
+              <img src="./images/hw8.jpg" alt="8" width="360" />
               <h2 class="portfolio-title-pg2">Organic Food</h2>
               <p class="portfolio-text-pg2">Web Site</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="images/hw6.jpg" alt="9" width="360" />
+              <img src="./images/hw6.jpg" alt="9" width="360" />
               <h2 class="portfolio-title-pg2">Fresh Coffee</h2>
               <p class="portfolio-text-pg2">Web Site</p>
             </a>
