--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,12 @@
       <address class="heder-address">
         <ul class="list">
           <li class="header-item-address">
-            <a href="mailto:info@devstudio.com" class="link"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -61,64 +61,64 @@
           <li>
             <a href="" class="link">
               <img src="./images/hw9.jpg" alt="1" width="360" />
-              <h2 class="portfolio-title-pg2">Banking App Interface Concept</h2>
-              <p class="portfolio-text-pg2">App</p>
+              <h2 class="portfolio-title-pg">Banking App Interface Concept</h2>
+              <p class="portfolio-text-pg">App</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw7.jpg" alt="2" width="360" />
-              <h2 class="portfolio-title-pg2">Cashless Payment</h2>
-              <p class="portfolio-text-pg2">Marketing</p></a
+              <h2 class="portfolio-title-pg">Cashless Payment</h2>
+              <p class="portfolio-text-pg">Marketing</p></a
             >
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw1.jpg" alt="3" width="360" />
-              <h2 class="portfolio-title-pg2">Meditation App</h2>
-              <p class="portfolio-text-pg2">App</p></a
+              <h2 class="portfolio-title-pg">Meditation App</h2>
+              <p class="portfolio-text-pg">App</p></a
             >
           </li>
           <li>
             <a href="" class="link-">
               <img src="./images/hw2.jpg" alt="4" width="360" />
-              <h2 class="portfolio-title-pg2">Taxi Service</h2>
-              <p class="portfolio-text-pg2">Marketing</p></a
+              <h2 class="portfolio-title-pg">Taxi Service</h2>
+              <p class="portfolio-text-pg">Marketing</p></a
             >
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw4.jpg" alt="5" width="360" />
-              <h2 class="portfolio-title-pg2">Screen Illustrations</h2>
-              <p class="portfolio-text-pg2">Design</p></a
+              <h2 class="portfolio-title-pg">Screen Illustrations</h2>
+              <p class="portfolio-text-pg">Design</p></a
             >
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw3.jpg" alt="6" width="360" />
-              <h2 class="portfolio-title-pg2">Online Courses</h2>
-              <p class="portfolio-text-pg2">Marketing</p>
+              <h2 class="portfolio-title-pg">Online Courses</h2>
+              <p class="portfolio-text-pg">Marketing</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw5.jpg" alt="7" width="360" />
-              <h2 class="portfolio-title-pg2">Instagram Stories Concept</h2>
-              <p class="portfolio-text-pg2">Design</p>
+              <h2 class="portfolio-title-pg">Instagram Stories Concept</h2>
+              <p class="portfolio-text-pg">Design</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw8.jpg" alt="8" width="360" />
-              <h2 class="portfolio-title-pg2">Organic Food</h2>
-              <p class="portfolio-text-pg2">Web Site</p>
+              <h2 class="portfolio-title-pg">Organic Food</h2>
+              <p class="portfolio-text-pg">Web Site</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/hw6.jpg" alt="9" width="360" />
-              <h2 class="portfolio-title-pg2">Fresh Coffee</h2>
-              <p class="portfolio-text-pg2">Web Site</p>
+              <h2 class="portfolio-title-pg">Fresh Coffee</h2>
+              <p class="portfolio-text-pg">Web Site</p>
             </a>
           </li>
         </ul>
