--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
         <ul class="list">
           <li class="header-item">
-            <a href="./index.html" class="header-link">Studio</a>
+            <a class="link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link">Portfolio</a>
+            <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-link">Contacts</a>
+            <a class="link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -36,14 +36,12 @@
       <address class="heder-address">
         <ul class="header-list-address">
           <li class="header-item-address">
-            <a href="mailto:info@devstudio.com" class="link-address"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a href="tel:+110001111111" class="link-address"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -142,7 +140,7 @@
 
     <!--info-->
     <footer class="footer">
-      <a href="./index.html" class="link">
+      <a class="logo-footer" href="./index.html">
         Web<span class="span-footer">Studio</span></a
       >
       <p class="footer-text">
