--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@400;500;700&family=Roboto:wght@100;300;400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -17,17 +17,19 @@
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo-header"
+          >Web<span class="span">Studio</span></a
+        >
 
         <ul class="list">
           <li class="header-item">
-            <a href="./index.html" class="header-link">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-link">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -49,7 +51,7 @@
     <main>
       <section class="menu-button">
         <h1>/</h1>
-        <ul class="list-button">
+        <ul class="list">
           <li><button type="button" class="pg-button">All</button></li>
           <li><button type="button" class="pg-button">Web Site</button></li>
           <li><button type="button" class="pg-button">App</button></li>
@@ -57,24 +59,28 @@
           <li><button type="button" class="pg-button">Marketing</button></li>
         </ul>
 
-        <ul class="list-portfolio">
+        <ul class="list">
           <li>
             <a href="" class="link">
-              <img src="./images/hw9.jpg" alt="1" width="360" />
+              <img
+                src="./images/hw9.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
               <h2 class="portfolio-title-pg">Banking App Interface Concept</h2>
               <p class="portfolio-text-pg">App</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw7.jpg" alt="2" width="360" />
+              <img src="./images/hw7.jpg" alt="Cashless Payment" width="360" />
               <h2 class="portfolio-title-pg">Cashless Payment</h2>
               <p class="portfolio-text-pg">Marketing</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw1.jpg" alt="3" width="360" />
+              <img src="./images/hw1.jpg" alt="Meditation App" width="360" />
               <h2 class="portfolio-title-pg">Meditation App</h2>
               <p class="portfolio-text-pg">App</p></a
             >
