--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-header"
+        <a href="./index.html" class="link-logo-header"
           >Web<span class="span">Studio</span></a
         >
 
         <ul class="list">
           <li class="header-item">
-            <a class="link" href="./index.html">Studio</a>
+            <a class="link-header" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+            <a class="link-header" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="link" href="">Contacts</a>
+            <a class="link-header" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -38,12 +38,14 @@
       <address class="heder-address">
         <ul class="header-list-address">
           <li class="header-item-address">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link-address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link-address" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -142,7 +144,7 @@
 
     <!--info-->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html">
+      <a class="link-logo-footer" href="./index.html">
         Web<span class="span-footer">Studio</span></a
       >
       <p class="footer-text">
