--- a/portfolio.html
+++ b/portfolio.html
@@ -17,32 +17,34 @@
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-header"
+        <a href="./index.html" class="link-logo-header"
           >Web<span class="span">Studio</span></a
         >
 
         <ul class="list">
           <li class="header-item">
-            <a href="./index.html" class="link">Studio</a>
+            <a class="link-header" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+            <a class="link-header" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a href="" class="link">Contacts</a>
+            <a class="link-header" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="heder-address">
-        <ul class="list">
+        <ul class="header-list-address">
           <li class="header-item-address">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link-address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link-address" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -62,11 +64,7 @@
         <ul class="list">
           <li>
             <a href="" class="link">
-              <img
-                src="./images/hw9.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
+              <img src="./images/hw9.jpg" alt="Banking App Interface Concept" />
               <h2 class="portfolio-title-pg">Banking App Interface Concept</h2>
               <p class="portfolio-text-pg">App</p>
             </a>
@@ -86,43 +84,51 @@
             >
           </li>
           <li>
-            <a href="" class="link-">
-              <img src="./images/hw2.jpg" alt="4" width="360" />
+            <a href="" class="link">
+              <img src="./images/hw2.jpg" alt="Taxi Service" width="360" />
               <h2 class="portfolio-title-pg">Taxi Service</h2>
               <p class="portfolio-text-pg">Marketing</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw4.jpg" alt="5" width="360" />
+              <img
+                src="./images/hw4.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
               <h2 class="portfolio-title-pg">Screen Illustrations</h2>
               <p class="portfolio-text-pg">Design</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw3.jpg" alt="6" width="360" />
+              <img src="./images/hw3.jpg" alt="Online Courses" width="360" />
               <h2 class="portfolio-title-pg">Online Courses</h2>
               <p class="portfolio-text-pg">Marketing</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw5.jpg" alt="7" width="360" />
+              <img
+                src="./images/hw5.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
               <h2 class="portfolio-title-pg">Instagram Stories Concept</h2>
               <p class="portfolio-text-pg">Design</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw8.jpg" alt="8" width="360" />
+              <img src="./images/hw8.jpg" alt="Organic Food" width="360" />
               <h2 class="portfolio-title-pg">Organic Food</h2>
               <p class="portfolio-text-pg">Web Site</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/hw6.jpg" alt="9" width="360" />
+              <img src="./images/hw6.jpg" alt="Fresh Coffee" width="360" />
               <h2 class="portfolio-title-pg">Fresh Coffee</h2>
               <p class="portfolio-text-pg">Web Site</p>
             </a>
@@ -132,7 +138,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-footer">
+      <a href="./index.html" class="link-logo-footer">
         Web<span class="span-footer">Studio</span></a
       >
       <p class="footer-text">
