--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="link-logo-header"
+        <a href="./index.html" class="link-logo-header link"
           >Web<span class="span">Studio</span></a
         >
 
@@ -36,14 +36,14 @@
       </nav>
 
       <address class="heder-address">
-        <ul class="header-list-address">
-          <li class="header-item-address">
+        <ul class="header-list-address list">
+          <li class="header-item-address link">
             <a class="link-address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a class="link-address" href="tel:+110001111111"
+            <a class="link-address link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -144,7 +144,7 @@
 
     <!--info-->
     <footer class="footer">
-      <a class="link-logo-footer" href="./index.html">
+      <a class="link-logo-footer link" href="./index.html">
         Web<span class="span-footer">Studio</span></a
       >
       <p class="footer-text">
