--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!--menu-->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="link-logo-header"
+        <a href="./index.html" class="link-logo-header link"
           >Web<span class="span">Studio</span></a
         >
 
@@ -64,7 +64,11 @@
         <ul class="list">
           <li>
             <a href="" class="link">
-              <img src="./images/hw9.jpg" alt="Banking App Interface Concept" />
+              <img
+                src="./images/hw9.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
               <h2 class="portfolio-title-pg">Banking App Interface Concept</h2>
               <p class="portfolio-text-pg">App</p>
             </a>
@@ -138,7 +142,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="link-logo-footer">
+      <a href="./index.html" class="link-logo-footer link">
         Web<span class="span-footer">Studio</span></a
       >
       <p class="footer-text">
