--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
         <ul class="list">
           <li class="header-item">
-            <a class="link-header" href="./index.html">Studio</a>
+            <a class="link-header link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="link-header" href="./portfolio.html">Portfolio</a>
+            <a class="link-header link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="link-header" href="">Contacts</a>
+            <a class="link-header link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -38,7 +38,7 @@
       <address class="heder-address">
         <ul class="header-list-address list">
           <li class="header-item-address link">
-            <a class="link-address" href="mailto:info@devstudio.com"
+            <a class="link-address link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
