--- a/portfolio.html
+++ b/portfolio.html
@@ -23,26 +23,26 @@
 
         <ul class="list">
           <li class="header-item">
-            <a class="link-header" href="./index.html">Studio</a>
+            <a class="link-header link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="link-header" href="./portfolio.html">Portfolio</a>
+            <a class="link-header link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="link-header" href="">Contacts</a>
+            <a class="link-header link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="heder-address">
-        <ul class="header-list-address">
-          <li class="header-item-address">
-            <a class="link-address" href="mailto:info@devstudio.com"
+        <ul class="header-list-address list">
+          <li class="header-item-address link">
+            <a class="link-address link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item-address">
-            <a class="link-address" href="tel:+110001111111"
+            <a class="link-address link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
