--- a/index.html
+++ b/index.html
@@ -137,23 +137,31 @@
           <ul class="list team-list">
             <li class="team-item">
               <img src="./images/img.jpg" alt=">Mark Guerrero" width="264" />
-              <h3 class="team-title-second">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="name">
+                <h3 class="team-title-second">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img1.jpg" alt="Tom Ford" width="264" />
-              <h3 class="team-title-second">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="name">
+                <h3 class="team-title-second">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img2.jpg" alt="Camila Garcia" width="264" />
-              <h3 class="team-title-second">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="name">
+                <h3 class="team-title-second">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" />
-              <h3 class="team-title-second">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="name">
+                <h3 class="team-title-second">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
