--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
 
     <main>
       <section class="menu-button">
-        <div class="container buton-container">
-          <h1></h1>
+        <div class="container container-portfolio">
+          <h1>/</h1>
           <ul class="list list-button">
             <li><button type="button" class="pg-button">All</button></li>
             <li>
@@ -74,100 +74,121 @@
             <li><button type="button" class="pg-button">Design</button></li>
             <li><button type="button" class="pg-button">Marketing</button></li>
           </ul>
-        </div>
-        <div class="container container-mod">
+
           <ul class="list list-mode">
             <li class="item-mod">
-              <a href="" class="link">
-                <img
-                  src="./images/hw9.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-text-pg">App</p></div>
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img
+                    src="./images/hw9.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <h2 class="portfolio-title-pg">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-text-pg">App</p>
+                </div>
               </a>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img
-                  src="./images/hw7.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Cashless Payment</h2>
-                <p class="portfolio-text-pg">Marketing</p></a
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img
+                    src="./images/hw7.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+
+                  <h2 class="portfolio-title-pg">Cashless Payment</h2>
+                  <p class="portfolio-text-pg">Marketing</p>
+                </div></a
               >
-              </div>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img src="./images/hw1.jpg" alt="Meditation App" width="360" />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Meditation App</h2>
-                <p class="portfolio-text-pg">App</p></a
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img
+                    src="./images/hw1.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+
+                  <h2 class="portfolio-title-pg">Meditation App</h2>
+                  <p class="portfolio-text-pg">App</p>
+                </div></a
               >
-              </div>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img src="./images/hw2.jpg" alt="Taxi Service" width="360" />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Taxi Service</h2>
-                <p class="portfolio-text-pg">Marketing</p></a
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img src="./images/hw2.jpg" alt="Taxi Service" width="360" />
+
+                  <h2 class="portfolio-title-pg">Taxi Service</h2>
+                  <p class="portfolio-text-pg">Marketing</p>
+                </div></a
               >
-              </div>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img
-                  src="./images/hw4.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Screen Illustrations</h2>
-                <p class="portfolio-text-pg">Design</p></div>
-                </a>
-            </li>
-            <li class="item-mod">
-              <a href="" class="link">
-                <img src="./images/hw3.jpg" alt="Online Courses" width="360" />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Online Courses</h2>
-                <p class="portfolio-text-pg">Marketing</p></div>
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img
+                    src="./images/hw4.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+
+                  <h2 class="portfolio-title-pg">Screen Illustrations</h2>
+                  <p class="portfolio-text-pg">Design</p>
+                </div>
               </a>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img
-                  src="./images/hw5.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Instagram Stories Concept</h2>
-                <p class="portfolio-text-pg">Design</p></div>
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img
+                    src="./images/hw3.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+
+                  <h2 class="portfolio-title-pg">Online Courses</h2>
+                  <p class="portfolio-text-pg">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img src="./images/hw8.jpg" alt="Organic Food" width="360" />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Organic Food</h2>
-                <p class="portfolio-text-pg">Web Site</p></div>
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img
+                    src="./images/hw5.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+
+                  <h2 class="portfolio-title-pg">Instagram Stories Concept</h2>
+                  <p class="portfolio-text-pg">Design</p>
+                </div>
               </a>
             </li>
             <li class="item-mod">
-              <a href="" class="link">
-                <img src="./images/hw6.jpg" alt="Fresh Coffee" width="360" />
-                <div class="conteiner-text">
-                <h2 class="portfolio-title-pg">Fresh Coffee</h2>
-                <p class="portfolio-text-pg">Web Site</p></div>
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img src="./images/hw8.jpg" alt="Organic Food" width="360" />
+
+                  <h2 class="portfolio-title-pg">Organic Food</h2>
+                  <p class="portfolio-text-pg">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link"
+                ><div class="conteiner-text">
+                  <img src="./images/hw6.jpg" alt="Fresh Coffee" width="360" />
+
+                  <h2 class="portfolio-title-pg">Fresh Coffee</h2>
+                  <p class="portfolio-text-pg">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
